fix: including overflow hidden

--- a/css/all.css
+++ b/css/all.css
@@ -5,6 +5,10 @@
   font-family: "Avenir Next";
 }
 
+body {
+  overflow: hidden;
+}
+
 .main {
   width: 100%;
   height: 100vh;
@@ -51,7 +55,6 @@
   position: absolute;
   top: 0;
   left: 0;
-  overflow: hidden;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -95,7 +98,6 @@
   width: 100%;
   height: 100vh;
   position: absolute;
-  overflow: hidden;
 }
 .step-2 .bg-image {
   height: 20vh;
@@ -189,7 +191,6 @@
   width: 100%;
   height: 100vh;
   position: absolute;
-  overflow: hidden;
 }
 .step-3 .bg-image {
   height: 20vh;
@@ -314,7 +315,6 @@
   width: 100%;
   height: 100vh;
   position: absolute;
-  overflow: hidden;
 }
 .step-4 .bg-image {
   height: 20vh;
@@ -391,7 +391,6 @@
   width: 100%;
   height: 100vh;
   position: absolute;
-  overflow: hidden;
 }
 .step-5 .bg-image {
   height: 20vh;
