--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,3 +1,7 @@
+body {
+  overflow: hidden;
+}
+
 .main {
   width: 100%;
   height: 100vh;
