--- a/scss/_step-4.scss
+++ b/scss/_step-4.scss
@@ -2,7 +2,6 @@
   width: 100%;
   height: 100vh;
   position: absolute;
-  overflow: hidden;
 
   .bg-image {
     height: 20vh;
